RESOLVED FIXED301255
[WebXR Hit Test] XRRay
https://bugs.webkit.org/show_bug.cgi?id=301255
Summary [WebXR Hit Test] XRRay
Fujii Hironori
Reported 2025-10-21 23:09:54 PDT
Attachments
Fujii Hironori
Comment 1 2025-10-21 23:20:38 PDT
EWS
Comment 2 2025-10-22 17:40:54 PDT
Committed 301987@main (b9d52d2f714f): <https://commits.webkit.org/301987@main> Reviewed commits have been landed. Closing PR #52798 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-22 17:41:12 PDT
Fujii Hironori
Comment 4 2025-10-23 01:25:39 PDT
clang reports warnings. In file included from /home/fujii/webkit/wb/WebKitBuild/GTK/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-15561f92-69.cpp:1: /home/fujii/webkit/wb/Source/WebCore/Modules/webxr/WebXRRay.cpp:74:12: error: returning reference to local temporary object [-Werror,-Wreturn-stack-address] 74 | return DOMPointReadOnly::fromFloatPoint(m_origin); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/fujii/webkit/wb/Source/WebCore/Modules/webxr/WebXRRay.cpp:79:12: error: returning reference to local temporary object [-Werror,-Wreturn-stack-address] 79 | return DOMPointReadOnly::create(m_direction.x(), m_direction.y(), m_direction.z(), 0); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 2 errors generated.
Fujii Hironori
Comment 5 2025-10-23 01:38:10 PDT
EWS
Comment 6 2025-10-23 02:35:49 PDT
Committed 302016@main (7ef08aba259e): <https://commits.webkit.org/302016@main> Reviewed commits have been landed. Closing PR #52866 and removing active labels.
Fujii Hironori
Comment 7 2025-10-23 06:10:19 PDT
EWS
Comment 8 2025-10-23 15:54:06 PDT
Committed 302060@main (86abaa3fd071): <https://commits.webkit.org/302060@main> Reviewed commits have been landed. Closing PR #52880 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.