[WebXR Hit Test] XRRay support https://bugs.webkit.org/show_bug.cgi?id=301255

Reviewed by Dan Glastonbury.

Added XRRay support based on the Chromium implementations.
<https://immersive-web.github.io/hit-test/#xrray-interface>
<https://chromium.googlesource.com/chromium/src/+/refs/heads/main/third_party/blink/renderer/modules/xr/xr_ray.cc>

Tests: imported/w3c/web-platform-tests/webxr/hit-test/xrRay_constructor.https.html
       imported/w3c/web-platform-tests/webxr/hit-test/xrRay_matrix.https.html

* LayoutTests/imported/w3c/web-platform-tests/webxr/hit-test/xrRay_constructor.https-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/webxr/hit-test/xrRay_matrix.https-expected.txt: Added.
* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/webxr/WebXRRay.cpp:
(WebCore::WebXRRay::create):
(WebCore::WebXRRay::WebXRRay):
(WebCore::WebXRRay::origin):
(WebCore::WebXRRay::direction):
(WebCore::WebXRRay::matrix):
* Source/WebCore/Modules/webxr/WebXRRay.h:

Canonical link: https://commits.webkit.org/302060@main